--- a/topografiya/templates/master.html
+++ b/topografiya/templates/master.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/icofont.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/flag-icon.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/feather-icon.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/themify.css' %}">
+
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/prism.css' %}">
 
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/select2.css' %}">
@@ -124,17 +126,15 @@
 
     <div class="page-body-wrapper horizontal-menu">
 
-        <header class="main-nav">
+            <header class="main-nav">
             <nav>
                 <div class="main-navbar">
                     <div id="mainnav">
-
                         <ul class="nav-menu custom-scrollbar">
                             <li class="back-btn">
                                 <div class="mobile-back text-end"><span>Back</span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
                             </li>
-
-                            <li><a class="nav-link menu-title link-nav" href="{% url 'index' %}"><i data-feather="home"></i><span>Бош саҳифа</span></a></li>
+                           <li><a class="nav-link menu-title link-nav" href="{% url 'index' %}"><i data-feather="home"></i><span>Бош саҳифа</span></a></li>
 
                             {% if user.profile.status == '1' %}
                                 <li><a class="nav-link menu-title link-nav" href="{% url 'pdoworks' %}"><i data-feather="file"></i><span>Янги шартномалар </span></a></li>
@@ -142,31 +142,97 @@
 
 
                             {% if user.profile.status == '0' %}
-                                <li><a class="nav-link menu-title link-nav" href="{% url 'pdoworks' %}"><i data-feather="file"></i><span>Янги топшириклар <span class="bg-danger p-1" style="border-radius: 10px">5</span></span></a></li>
+                                <li>
+                                    <a class="nav-link menu-title link-nav" href="{% url 'worker_new_works' %}">
+                                        <i data-feather="file"></i>
+
+                                        <span>Tопшириклар &nbsp;&nbsp;
+                                            {% if objects %}
+                                            <span class="badge badge-danger rounded-pill">
+                                                {{ objects.count }}
+                                            </span>
+                                                {% endif %}
+                                        </span>
+                                    </a>
+                                </li>
                             {% endif %}
-
-
-                            <li class="dropdown"><a class="nav-link menu-title " href="javascript:void(0)"><i data-feather="briefcase"></i><span>Ишлар</span></a>
+                            <li class="dropdown"><a class="nav-link menu-title active" href="javascript:void(0)"><i data-feather="briefcase"></i><span>Ишлар</span></a>
                                 <ul class="nav-submenu menu-content">
-                                            <li><a href="../starter-kit/all_work.html">Барча ишлар</a></li>
-                                            <li><a href="../starter-kit/work.html">Топографик-геодезик дастури</a></li>
+                                            <li><a href="{% url 'allworks' %}">Барча ишлар</a></li>
+                                            <li><a href="{% url 'program_works' %}">Топографик-геодезик дастури</a></li>
                                            <li><a href="../starter-kit/dawork.html">Дала назорати</a></li>
                                           <li><a href="../starter-kit/kawork.html">Камера назорати</a></li>
                                 </ul>
                             </li>
                             {% if user.profile.status == '1' %}
-                                <li class=""><a class="nav-link menu-title link-nav" href="../starter-kit/users.html"><i data-feather="users"></i><span>Ходимлар</span></a></li>
+                                <li class="dropdown"><a class="nav-link menu-title link-nav" href="../starter-kit/users.html"><i data-feather="users"></i><span>Ходимлар</span></a></li>
                             {% endif %}
-                            <li class=""><a class="nav-link menu-title link-nav" href="#"><i data-feather="message-circle"></i><span>Хабарлар<span style="float: right" class="badge rounded-pill badge-danger">3</span></span></a></li>
-                            <li class=""><a class="nav-link menu-title link-nav" href="#"><i data-feather="arrow-down-circle"></i><span>Aрхив</span></a></li>
-                            <li class=""><a class="nav-link menu-title link-nav" href="#"><i data-feather="settings"></i><span>Созламалар</span></a></li>
+                            <li class="dropdown"><a class="nav-link menu-title link-nav" href="#"><i data-feather="message-circle"></i><span>Хабарлар<span style="float: right" class="badge rounded-pill badge-danger">3</span></span></a></li>
+                            <li class="dropdown"><a class="nav-link menu-title link-nav" href="#"><i data-feather="arrow-down-circle"></i><span>Aрхив</span></a></li>
+                            <li class="dropdown"><a class="nav-link menu-title link-nav" href="../starter-kit/settings.html"><i data-feather="settings"></i><span>Созламалар</span></a></li>
                             <li style="position: fixed;bottom: 10px;"><a  href="tel:+998711715658"><i data-feather="phone"></i> +998711715658</a></li>
                         </ul>
-
                     </div>
                 </div>
             </nav>
         </header>
+
+{#        <header class="main-nav">#}
+{#            <nav>#}
+{#                <div class="main-navbar">#}
+{#                    <div id="mainnav">#}
+{##}
+{#                        <ul class="nav-menu custom-scrollbar">#}
+{#                            <li class="back-btn">#}
+{#                                <div class="mobile-back text-end"><span>Back</span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>#}
+{#                            </li>#}
+{##}
+{#                            <li><a class="nav-link menu-title link-nav" href="{% url 'index' %}"><i data-feather="home"></i><span>Бош саҳифа</span></a></li>#}
+{##}
+{#                            {% if user.profile.status == '1' %}#}
+{#                                <li><a class="nav-link menu-title link-nav" href="{% url 'pdoworks' %}"><i data-feather="file"></i><span>Янги шартномалар </span></a></li>#}
+{#                            {% endif %}#}
+{##}
+{##}
+{#                            {% if user.profile.status == '0' %}#}
+{#                                <li>#}
+{#                                    <a class="nav-link menu-title link-nav" href="{% url 'worker_new_works' %}">#}
+{#                                        <i data-feather="file"></i>#}
+{#                                        Янги#}
+{#                                        <span>Tопшириклар &nbsp;&nbsp;#}
+{#                                            {% if objects %}#}
+{#                                            <span class="badge badge-danger rounded-pill">#}
+{#                                                {{ objects.count }}#}
+{#                                            </span>#}
+{#                                                {% endif %}#}
+{#                                        </span>#}
+{#                                    </a>#}
+{#                                </li>#}
+{#                            {% endif %}#}
+{##}
+{##}
+{#                            <li class="dropdown"><a class="nav-link menu-title active" href="javascript:void(0)"><i data-feather="briefcase"></i><span>Ишлар</span></a>#}
+{#                                <ul class="nav-submenu menu-content">#}
+{#                                            <li><a href="../starter-kit/all_work.html">Барча ишлар</a></li>#}
+{#                                            <li><a href="../starter-kit/work.html">Топографик-геодезик дастури</a></li>#}
+{#                                           <li><a href="../starter-kit/dawork.html">Дала назорати</a></li>#}
+{#                                          <li><a href="../starter-kit/kawork.html">Камера назорати</a></li>#}
+{#                                </ul>#}
+{#                            </li>#}
+{##}
+{#                            {% if user.profile.status == '1' %}#}
+{#                                <li class=""><a class="nav-link menu-title link-nav" href="../starter-kit/users.html"><i data-feather="users"></i><span>Ходимлар</span></a></li>#}
+{#                            {% endif %}#}
+{#                            <li class=""><a class="nav-link menu-title link-nav" href="#"><i data-feather="message-circle"></i><span>Хабарлар<span style="float: right" class="badge rounded-pill badge-danger">3</span></span></a></li>#}
+{#                            <li class=""><a class="nav-link menu-title link-nav" href="#"><i data-feather="arrow-down-circle"></i><span>Aрхив</span></a></li>#}
+{#                            <li class=""><a class="nav-link menu-title link-nav" href="#"><i data-feather="settings"></i><span>Созламалар</span></a></li>#}
+{#                            <li style="position: fixed;bottom: 10px;"><a  href="tel:+998711715658"><i data-feather="phone"></i> +998711715658</a></li>#}
+{#                        </ul>#}
+{##}
+{#                    </div>#}
+{#                </div>#}
+{#            </nav>#}
+{#        </header>#}
 
 
     {% block content %}
