--- a/topografiya/static/assets/css/style.css
+++ b/topografiya/static/assets/css/style.css
@@ -120,7 +120,15 @@ body {
     font-size: 15px;
     color: #111727;
 }
+.user_name{
+    text-transform:uppercase;
+    color: #111727;
+    font-weight: 500;
+}
+.user_local{
+    color: #858585;
 
+}
 ul {
     padding-left: 0px;
     list-style-type: none;
@@ -7139,10 +7147,10 @@ table tbody .border-bottom-warning td {
 }
 
 .page-wrapper.compact-wrapper .page-body-wrapper header.main-nav .main-navbar .nav-menu > li a {
-    padding: 10px 15px;
+    padding: 9px 14px;
     position: relative;
     color: #ffffff;
-    font-size: 16px;
+    font-size: 15px;
 }
 
 .page-wrapper.compact-wrapper .page-body-wrapper header.main-nav .main-navbar .nav-menu > li a svg {
@@ -22161,7 +22169,7 @@ p.data-attributes svg {
     }
 
     .blog-box .blog-details-second .blog-post-date {
-        margin-top: -35px;
+        margin-top: -15px;
     }
 
     .blog-box .blog-details-second .blog-post-date .blg-month, .blog-box .blog-details-second .blog-post-date .blg-date {
@@ -22283,7 +22291,7 @@ p.data-attributes svg {
     }
 
     .blog-box .blog-details-second .blog-post-date {
-        margin-top: -35px;
+        margin-top: -15px;
     }
 
     .blog-box .blog-details-second .blog-post-date .blg-month, .blog-box .blog-details-second .blog-post-date .blg-date {
@@ -22449,7 +22457,7 @@ footer p {
     content: " ";
     width: 100%;
     height: 1px;
-    background-color: #e6edef;
+    background-color: #64a9fc;
 }
 
 .stepwizard .stepwizard-row .stepwizard-step {
