--- a/topografiya/templates/leader/all_works.html
+++ b/topografiya/templates/leader/all_works.html
@@ -6,26 +6,13 @@
 
 {% block stylecontent %}
 <style>
-.look {
-        white-space: nowrap;
-        color: #168eea;
-        border: 1px solid #168eea;
-        padding: 4px;
-        border-radius: 7px;
-    }
-
-    .look:hover {
-        background-color: #168eea;
-        color: #ffffff;
-    }
-
     .views {
         border-radius: 50%;
         padding: 2px 11px !important;
     }
 
     .succes {
-        background-color: #d0fdce;
+        background-color: #aaffa6;
         color: #1c7717;
         padding: 7px;
         border-radius: 7px;
@@ -212,7 +199,11 @@
                                                             <td><a href="../starter-kit/timearxiv.html" class="warning">29/12/2021</a></td>
                                                             <td><span class="succes">13/01/2022</span></td>
                                                             <td><span class="succes">12/12/2021</span></td>
-                                                            <td><a class="look" href="" data-bs-toggle="modal" data-bs-target=".bd-example-modal-lg"><i class="fa fa-eye"></i> Кўриш</a></td>
+                                                            <td>
+                                                                <a class="" href="" data-bs-toggle="modal" data-bs-target=".bd-example-modal-lg">
+                                                                    <button style="white-space: nowrap;" class="btn btn-primary">Кўриш</button>
+                                                                </a>
+                                                            </td>
 
                                                         </tr>
                                                         <tr class="table-warning">
@@ -223,8 +214,10 @@
                                                             <td><span class="warning tie">29/12/2021</span></td>
                                                             <td><span class="succes tie">13/01/2022</span></td>
                                                             <td><span class="tie">.....</span></td>
-                                                            <td><a class="look" href="/"><i
-                                                                    class="fa fa-eye"></i> Кўриш</a></td>
+                                                            <td><a class="" href="" data-bs-toggle="modal" data-bs-target=".bd-example-modal-lg">
+                                                                                    <button style="white-space: nowrap;" class="btn btn-primary">Кўриш</button>
+                                                                                </a>
+                                                                                </td>
                                                         </tr>
                                                         <tr  class="table-danger">
                                                             <th scope="row">3</th>
@@ -234,8 +227,10 @@
                                                             <td><span class="warning">29/12/2021</span></td>
                                                             <td><span class="warning">13/01/2022</span></td>
                                                             <td><span class="">.....</span></td>
-                                                            <td><a class="look" href="/"><i
-                                                                    class="fa fa-eye"></i> Кўриш</a></td>
+                                                            <td><a class="" href="" data-bs-toggle="modal" data-bs-target=".bd-example-modal-lg">
+                                                                                    <button style="white-space: nowrap;" class="btn btn-primary">Кўриш</button>
+                                                                                </a>
+                                                                                </td>
                                                         </tr>
                                                         <tr class="table-danger">
                                                             <th scope="row">4</th>
@@ -245,8 +240,10 @@
                                                             <td><span class="">.......</span></td>
                                                             <td><span class="danger ">13/01/2022</span></td>
                                                             <td><span class="warning ">07/12/2021</span></td>
-                                                            <td><a class="look" href="/"><i
-                                                                    class="fa fa-eye"></i> Кўриш</a></td>
+                                                            <td><a class="" href="" data-bs-toggle="modal" data-bs-target=".bd-example-modal-lg">
+                                                                                    <button style="white-space: nowrap;" class="btn btn-primary">Кўриш</button>
+                                                                                </a>
+                                                                                </td>
                                                         </tr>
                                                         <tr class="table-warning">
                                                             <th scope="row">5</th>
@@ -256,8 +253,10 @@
                                                             <td><span class="warning te">29/12/2021</span></td>
                                                             <td><span class="succes tie">13/01/2022</span></td>
                                                             <td><span class="">.....</span></td>
-                                                            <td><a class="look" href="/"><i
-                                                                    class="fa fa-eye"></i> Кўриш</a></td>
+                                                            <td><a class="" href="" data-bs-toggle="modal" data-bs-target=".bd-example-modal-lg">
+                                                                                    <button style="white-space: nowrap;" class="btn btn-primary">Кўриш</button>
+                                                                                </a>
+                                                                                </td>
                                                         </tr>
                                                         <tr style="background-color: #d5f8da">
                                                             <th scope="row">6</th>
@@ -267,8 +266,10 @@
                                                             <td><span class="warning ">29/12/2021</span></td>
                                                             <td><span class="succes ">13/01/2022</span></td>
                                                             <td><span class="succes ">12/12/2021</span></td>
-                                                            <td><a class="look" href="/"><i
-                                                                    class="fa fa-eye"></i> Кўриш</a></td>
+                                                            <td><a class="" href="" data-bs-toggle="modal" data-bs-target=".bd-example-modal-lg">
+                                                                                    <button style="white-space: nowrap;" class="btn btn-primary">Кўриш</button>
+                                                                                </a>
+                                                                                </td>
                                                         </tr>
                                                         <tr class="table-warning">
                                                             <th scope="row">7</th>
