--- a/topografiya/templates/master.html
+++ b/topografiya/templates/master.html
@@ -171,7 +171,7 @@
                             <li class="dropdown"><a class="nav-link menu-title active" href="javascript:void(0)"><i data-feather="briefcase"></i><span>Ишлар</span></a>
                                 <ul class="nav-submenu menu-content">
                                             <li><a href="{% url 'allworks' %}">Барча ишлар</a></li>
-                                            <li><a href="{% url 'program_works' %}">Топографик-геодезик дастури</a></li>
+                                            <li><a href="{% url 'program_works_leader' %}">Топографик-геодезик дастури</a></li>
                                            <li><a href="../starter-kit/dawork.html">Дала назорати</a></li>
                                           <li><a href="../starter-kit/kawork.html">Камера назорати</a></li>
                                 </ul>
@@ -279,6 +279,7 @@
 
 <script src="{% static 'assets/js/select2/select2.full.min.js' %}"></script>
 <script src="{% static 'assets/js/select2/select2-custom.js' %}"></script>
+
 
 
 
