--- a/topografiya/templates/worker/worker_new_works.html
+++ b/topografiya/templates/worker/worker_new_works.html
@@ -63,6 +63,13 @@
                                         <div><b>Ташкилот номи:</b> {{ work.pdowork.customer_info }}</div>
                                         <div><b>Келиб тушган вақти:</b> {{ work.pdowork.agreement_date}}</div>
                                         <div><b>Жойлашган жойи:</b> {{ work.pdowork.object_address }}</div>
+                                        <div><b>Ишчи дастури :</b>
+                                            {% if work.isset_programwork == True %}
+                                               <b class="text-success"><i  class="fa fa-check"></i> Мавжуд</b>
+                                                {% else %}
+                                                <b class="text-danger"><i  class="fa fa-close"></i> Мавжуд эмас</b>
+                                            {% endif %}
+                                        </div>
                                         <div class="detail-footer m-t-20">
                                             <button class="btn btn-primary show_work"  work-id="{{ work.pdowork.id }}"  data-bs-toggle="modal"
                                                     data-bs-target="#exampleModal" >
@@ -160,12 +167,13 @@ $(document).ready(function(){
                     </div>
                     <div class="col-lg-6 text-end">
                         <div class="m-b-20"><a class="f-w-500 f-15 m-b-20" href="/`+result['pdowork'][0].smeta+`"><i class="fa fa-file-pdf-o f-20"></i>  Смета файли билан танишиш</a></div>
-                        <div><a class="f-w-500 f-15 file" href="{% static 'files/file.pdf' %}"><i class="fa fa-file-pdf-o f-20"></i>  Илова файли билан танишиш </a></div>
+                        <div><a class="f-w-500 f-15 file" data-id=`+result['work'][0].id+` href='#'><i class="fa fa-file-pdf-o f-20"></i>  Илова файли билан танишиш </a></div>
+
                     </div>
                 </div>
                     <div class="row m-t-30">
                         <div class="col-lg-12">
-                            <button class="btn btn-primary text-center w-100 recive_work" worker-id="{{ user.profile.full_name }}" data-id=`+result['work'][0].id+`>Ишни қабул қилиш</button>
+                            <button class="btn btn-primary text-center w-100 recive_work" data-id1=`+result['work'][0].id+` worker-id="{{ user.profile.full_name }}" >Ишни қабул қилиш</button>
                         </div>
                     </div>
             `;
@@ -186,7 +194,7 @@ $(document).ready(function(){
     $(document).on('click',".recive_work",function(){
         var data = new FormData();
         data.append("csrfmiddlewaretoken", document.getElementsByName("csrfmiddlewaretoken")[0].value);
-        data.append("data-id", $(this).attr('data-id'));
+        data.append("data-id", $(this).attr('data-id1'));
         data.append("worker-id", $(this).attr('worker-id'));
         event.preventDefault()
         $.ajax({
@@ -199,6 +207,35 @@ $(document).ready(function(){
 
             success: function (result){
               	location.replace('/worker_new_works');
+            },
+
+            error: function(){
+              alert('Serverga yubara olmaymiz !! ');
+            }
+
+        });
+
+    });
+</script>
+    <script type="text/javascript">
+    $(document).on('click',".file",function(){
+        var data = new FormData();
+        data.append("csrfmiddlewaretoken", document.getElementsByName("csrfmiddlewaretoken")[0].value);
+        data.append("data-id", $(this).attr('data-id'));
+        {#alert($(this).attr('data-id'));#}
+        event.preventDefault()
+        $.ajax({
+            type: 'POST',
+            url: '{% url 'order_to_pdf' %}',
+            data: data,
+            cache: false,
+            contentType: false,
+            processData: false,
+
+            success: function (result){
+              	$('.file').attr('href','/static/files/file.pdf');
+                  $('.file').attr('target','_blank');
+                  $('.file').data('clicked', true);
             },
 
             error: function(){
