--- a/topografiya/templates/worker/polevoy_works.html
+++ b/topografiya/templates/worker/polevoy_works.html
@@ -1,22 +1,23 @@
 {% extends 'master.html' %}
 
 {% load static %}
-{% block title %} Топографик-Геодезик Дастури {% endblock %}
+{% block title %} Dala nazorati {% endblock %}
+
 {% block content%}
 
 {% block stylecontent %}
 
 {% endblock stylecontent %}
 
-        <div class="page-body">
+            <div class="page-body">
             <div class="container-fluid">
                 <div class="page-header">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h3>Топографик-геодезик дастури</h3>
+                            <h3>Дала назорати</h3>
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="{% url 'index' %}">Бош саҳифа</a></li>
-                                <li class="breadcrumb-item active">Топографик-геодезик дастури</li>
+                                <li class="breadcrumb-item active">Дала назорати</li>
                             </ol>
                         </div>
                     </div>
